# SimExtract

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/: attribution.yaml  data_prep.yaml.example
scripts/: demo_random_sampler.py  prepare_data.py  test_random_sampler.py
src/app/: README.md  __init__.py  config.py  dependencies.py  main.py  schemas.py
src/app/routers/: analysis.py  health.py  static.py
src/attribution/: __init__.py  base.py
src/attribution/colbert/: __init__.py  method.py
src/attribution/cross_encoder/: __init__.py  method.py
src/attribution/late_chunking/: __init__.py  method.py
src/attribution/segmented/: __init__.py  method.py
src/attribution/token_wise/: __init__.py  colbert.py  sparse.py  utils.py
src/data_pipeline/: __init__.py  batch_processor.py
src/data_pipeline/readers/: __init__.py  base.py  csv_reader.py  json_reader.py
src/data_pipeline/rerankers/: __init__.py  base.py  tei_reranker.py
src/data_pipeline/samplers/: __init__.py  (+1 more)
src/evaluation/: __init__.py  base.py  cross_encoder.py  drop_one.py  llm_judge.py
src/experiments/: README.md  __init__.py  demo_sparse_attribution_with_chroma.py  test_segmented_attribution.py  test_sparse_attribution.py
src/server/: README.md  __init__.py  config.py  dependencies.py  main.py  schemas.py
src/static/: index.html
src/utils/: __init__.py  config.py  llm_client.py  logger.py  similarity.py
tests/: test_colbert_attribution.py  test_colbert_integration.py  test_segmented_attribution.py  test_sparse_attribution.py  test_sparse_integration.py
(+12 files in other folders)
